flask_deployment/flask-nodeport.yaml
# This service is for local testing only
apiVersion: v1
kind: Service
metadata:
  name: flask-service-nodeport
  namespace: knowcars
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
      nodePort: 30080
  type: NodePort
