flask_deployment/flask-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-service
  namespace: knowcars
spec:
  selector:
    app: flask-api
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: LoadBalancer
